Work in progress on the 'new generation of stuff'.